[gd_scene load_steps=8 format=3 uid="uid://cq5ahh7362img"]

[ext_resource type="Script" path="res://scenes/pantalla_4_chat_test.gd" id="1_g0rh8"]
[ext_resource type="Texture2D" uid="uid://sk4edt1vteia" path="res://assets/scenes/mujer_BG.png" id="2_oe8ec"]
[ext_resource type="Texture2D" uid="uid://dyfs8e3t4on7" path="res://assets/chat/mujer_movil_chat.png" id="3_rqhye"]
[ext_resource type="LabelSettings" uid="uid://8frijjk43tp8" path="res://tres/label_settings/messages.tres" id="7_b6gm4"]
[ext_resource type="Texture2D" uid="uid://bfa0j5ope73ma" path="res://assets/ui/botones/boton_player_decision.png" id="10_xmvwl"]
[ext_resource type="LabelSettings" uid="uid://h68p4ud46nej" path="res://tres/label_settings/player_answers.tres" id="11_e8s6y"]
[ext_resource type="Texture2D" uid="uid://b5xdhws1vred3" path="res://assets/chat/mujer_manos.png" id="12_fcpyx"]

[node name="PantallaChatTest" type="Node2D"]
script = ExtResource("1_g0rh8")

[node name="Mujer_Frame" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_oe8ec")
expand_mode = 3

[node name="Mujer_Movil" type="TextureRect" parent="."]
offset_left = 497.0
offset_top = 98.0
offset_right = 781.0
offset_bottom = 596.0
mouse_filter = 2
texture = ExtResource("3_rqhye")

[node name="EsperandoRespuesta" type="TextureRect" parent="Mujer_Movil"]
visible = false
layout_mode = 0
offset_left = 26.0
offset_top = 342.0
offset_right = 232.0
offset_bottom = 362.0
mouse_filter = 0

[node name="Label" type="Label" parent="Mujer_Movil/EsperandoRespuesta"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Mario est√° esperando una respuesta..."
label_settings = ExtResource("7_b6gm4")

[node name="Rpta_Positiva" type="TextureButton" parent="Mujer_Movil"]
visible = false
layout_mode = 0
offset_left = 22.0
offset_top = 372.0
offset_right = 262.0
offset_bottom = 412.0
texture_normal = ExtResource("10_xmvwl")

[node name="Label" type="Label" parent="Mujer_Movil/Rpta_Positiva"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -14.0
offset_right = 100.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("11_e8s6y")

[node name="Rpta_Negativa" type="TextureButton" parent="Mujer_Movil"]
visible = false
layout_mode = 0
offset_left = 22.0
offset_top = 413.0
offset_right = 262.0
offset_bottom = 453.0
texture_normal = ExtResource("10_xmvwl")

[node name="Label" type="Label" parent="Mujer_Movil/Rpta_Negativa"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -14.0
offset_right = 100.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("11_e8s6y")

[node name="Mujer_Manos" type="TextureRect" parent="."]
visible = false
offset_right = 1280.0
offset_bottom = 721.0
mouse_filter = 2
texture = ExtResource("12_fcpyx")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 498.0
offset_top = 166.0
offset_right = 779.0
offset_bottom = 457.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="Mujer_Movil/Rpta_Positiva" to="." method="_on_rpta_positiva_pressed"]
[connection signal="pressed" from="Mujer_Movil/Rpta_Negativa" to="." method="_on_rpta_negativa_pressed"]
